--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <groupId>com.github.jasync-sql</groupId>
+            <artifactId>jasync-postgresql</artifactId>
+            <version>1.1.3</version>
         </dependency>
     </dependencies>
 
